refactor: 테스트코드 추가 및 리팩토링